--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-pageflip": "^2.0.3",
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
