--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@splidejs/splide": "^4.1.4",
     "@tailwindcss/vite": "^4.1.11",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
